--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:8888",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
+    "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +20,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "shards-react": "^1.0.3",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.6.0"
   }
 }
