--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -14,6 +15,7 @@
     "autoprefixer": "^10.4.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
