--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://davide-biste.github.io/ToDoList-react/",
+  "homepage": "https://davide-biste.github.io/to-do-list-react/",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
