--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "to-do-list-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://davide-biste.github.io",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
