--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy GH
+name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggerata quando avviene un push sulla branch master
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
 
@@ -13,23 +13,23 @@ on:
 
 env:
   CI: false
-# Per far si che la build andasse anche se ci sono degli warning
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # Viene fatto girare sull'ultima immagine di ubuntu
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2   
-      
+      - uses: actions/checkout@v2
+
       - name: npm ci, build and test
         run: |
           npm ci
-          npm run build --if-present            
-      # npm ci è come npm i
+          npm run build --if-present
+      # Runs a set of commands using the runners shell
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
