--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://davide-biste.github.io/ToDoList-react/",
+  "proxy": "https://davide-to-do.herokuapp.com/",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -53,7 +53,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.6.0",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "prettier": "2.6.0"
   }
 }
